--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -29,11 +29,19 @@
         <input type="hidden" class="order_id" value="{{ order.id }}">
         <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
         <img src="{{ offerproduct.product.thumbnail.url }}" alt="" width="250" height="250">
+        {% if offerproduct.attribute_name  %}
+        <p class="offer-ttl">{{ offerproduct.product.title }} - {{offerproduct.attribute_name}}</p>
+        <p class="rgl_price">{{ offerproduct.product.regular_price }} ден</p>
+        <p class="sl_price">{{ offerproduct.price }} ден</p>
+        <p class="offer-save">ДОПОЛНИТЕЛНИ 250 ДЕН ЗАШТЕДА</p>
+        <button class="offer-button">НАРАЧАЈ</button>
+        {% else %}
         <p class="offer-ttl">{{ offerproduct.product.title }}</p>
         <p class="rgl_price">{{ offerproduct.product.regular_price }} ден</p>
         <p class="sl_price">{{ offerproduct.product.sale_price }} ден</p>
         <p class="offer-save">ДОПОЛНИТЕЛНИ 250 ДЕН ЗАШТЕДА</p>
         <button class="offer-button">НАРАЧАЈ</button>
+        {% endif %}
         </div class="offer-box">
         <p class="notice">Горенаведениот производ доколку нарачате ќе ви биде доставен со истата нарачка</p>
     </div>
@@ -49,11 +57,15 @@
             <tbody >
             {% for item in orderItems %}
             <tr class="cart-item-row">
-                <td class="cart-item product_data">
+                <td class="cart-item product_data" style="padding: 9px 12px;">
                     <input type="hidden" class="prod_id" value="{{ item.product_id }}">
                     {% csrf_token %}
                     <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="45" height="45">
+                    {% if item.attribute_name %}
+                    <p class="item-name">{{ item.product.title }} - {{item.attribute_name}}</p>
+                    {% else %}
                     <p class="item-name">{{ item.product.title }}</p>
+                    {% endif %}
                     <strong class="product-quantity">x {{ item.quantity }}</strong>
                 </td>
                 
@@ -61,6 +73,7 @@
                 
                 <td class="cart-item-total-row">
                     <p class="item-total">{{ item.price }} ден</p>
+
                 </td>
             </tr>
             {% endfor %}
@@ -83,7 +96,7 @@
                         <p>Цена</p>
                     </td>
                     <td>
-                        <p>790 ден</p>
+                        <p>{{order.subtotal_price}} ден</p>
                     </td>
                 </tr>
                 <tr class="cart-shipping">
@@ -91,7 +104,11 @@
                         <p>Достава</p>
                     </td>
                     <td>
+                        {% if order.shipping == True %}
+                        <p class="cart-shipping-method">До врата - 130ден</p>
+                        {% else %}
                         <p class="cart-shipping-method">Бесплатна достава</p>
+                        {% endif %}
                     </td>
                 </tr>
                 <tr class="cart-provision">
