--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -32,6 +32,7 @@
 
         <div class="header-cart header-icon">
             <img src="{% static 'icons/cart.webp' %}" alt="" class="image-icon" width="24" height="24">
+            <span id="cart-count">{{ itemscount }}</span>
             
         </div>
         <div class="header-menu header-icon">
@@ -57,13 +58,25 @@
         <span id="close-cart">&#10006</span>
     </div>
     <div class="sidecart-inner">
-        
-        {% if cart %}
         {% csrf_token %}
+        {% if itemscount == 1 %}
         <p class="progress-bar-text">Додади уште 1 производ за бесплатна достава</p>
         <div class="progress">
-            <div class="progress__bar"></div>
+            <div class="progress__bar progress_bar-half"></div>
         </div>
+        {% elif itemscount > 1 %}
+        <p class="progress-bar-text">бесплатна достава</p>
+        <div class="progress">
+            <div class="progress__bar progress_bar-full"></div>
+        </div>
+        {% else %}
+        <p class="progress-bar-text">Додади 2 производи за бесплатна достава</p>
+        <div class="progress">
+            <div class="progress__bar progress_bar-empty"></div>
+        </div>
+        {% endif %}
+        {% if cart %}
+        
         {% for item in cart %}
        
         <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item basic-sidecart-item  product_data" style="padding: 20px 0px; margin:0px 20px;">
@@ -110,7 +123,7 @@
                 
             </a>
             {% endfor %}
-            </div>
+        </div>
             <div class="sidecart-item sidecart-total">
             <p class="sidecart-total"><span class="strong">Цена:</span> {{cart_total}} ден</p>
             </div>
@@ -123,6 +136,32 @@
         {% else %}
         <div class="sidecart-item notice">
             <p class="cart-notice">Немате продукти во кошничка</p>
+        </div>
+        <div class="cart-offers">
+            
+            <p class="cart-offers-text">Може да ви се допадне</p>
+            {% for item in cartOffers %}
+            
+            <a href="{% url 'product-page' item.product.slug %}" target="_blank" class="sidecart-item sidecart-offer-item  product_data">
+                <input type="hidden" class="prod_id" value="{{ item.product.id }}">
+                <img src="{{ item.product.thumbnail_loop.url }}" alt="" width="60" height="60" class="cart-item-thumbnail">
+                <span class="sidecart-item-content sidecart-offer-content">
+                    <p class="sidecart-item-name">{{ item.product.title }}</p>
+                    <p class="sidecart-item-quantity">{{ item.product_qty }} x <span class="red">{{ item.product.sale_price }} ден</span></p>
+                    <p class="sidecartOffer-text">{{ item.offer_text }}</p>
+                    
+                </span>
+                {% if item.is_added == True %}
+                    <button class="add-to-cartBtn sidecartOfferBtn addedBtn">ДОДАДЕН</button>
+                {% else %}
+                    <button class="add-to-cartBtn sidecartOfferBtn">ДОДАДИ</button>
+                {% endif %}
+                
+                
+               
+                
+            </a>
+            {% endfor %}
         </div>
         {% endif %}
     </div>
