--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -90,7 +90,7 @@
         <div class="toggle-item">
             <p>ПОЛИТИКА НА ДОСТАВА</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
             <div class="toggle-content">
-                <a href="{% url 'dostava-page' %}" class="toggle-static-link">Погледни ја нашата поликита на достава</a>
+                <a href="{% url 'dostava-page' %}" target="_blank" class="toggle-static-link">Погледни ја нашата поликита на достава</a>
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
         <div class="toggle-item">
             <p>ПОЛИТИКА НА РЕКЛАМАЦИЈА</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
             <div class="toggle-content">
-                <a href="{% url 'reklamacija-page' %}" class="toggle-static-link">Погледни ја нашата поликита на рекламација</a>
+                <a href="{% url 'reklamacija-page' %}" target="_blank" class="toggle-static-link">Погледни ја нашата поликита на рекламација</a>
             </div>
         </div>
     </div>
